--- a/index.html
+++ b/index.html
@@ -125,39 +125,78 @@
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         text-align: center;
       }
+
+      @media (max-width: 768px) {
+        #info {
+          width: 95%;
+          padding: 1.5em;
+        }
+
+        #info h1 {
+          font-size: 2rem;
+        }
+
+        #info h2 {
+          font-size: 1.3rem;
+        }
+
+        #info p,
+        .project-item p,
+        .skill-item {
+          font-size: 1rem;
+        }
+
+        .skill-item {
+          padding: 1em;
+        }
+      }
     </style>
   </head>
   <body>
     <canvas id="canvas"></canvas>
     <div id="info">
       <h1>Brady Strouse — My Developer Portfolio</h1>
-      <p>This is a space where I share ideas, thoughts, and observations about the world, technology, and personal growth. Like the dots floating around in the background, everything is connected in ways we don't always see right away.</p>
-      <h2>Professional Experience</h2>
-      <div class="projects-grid">
-        <div class="project-item" onclick="toggleDescription(this)">
-          <strong>Meditation App</strong>
-          <p>Designed and implemented a cross-platform meditation app as part of my job, featuring guided sessions, user progress tracking, and soothing audio-visual feedback for enhanced user experience.</p>
-        </div>
-        <div class="project-item" onclick="toggleDescription(this)">
-          <strong>Multiplayer Museum Tour Software</strong>
-          <p>Professional project developed as part of my job. Worked in a scrum team on frontend/backend for museum software with location tracking, multiplayer support, and optimized animations.</p>
-        </div>
-      </div>
+      <p>
+        This is a space where I share ideas, thoughts, and observations about
+        the world, technology, and personal growth. Like the dots floating
+        around in the background, everything is connected in ways we don't
+        always see right away.
+      </p>
+
       <h2>Projects</h2>
       <div class="projects-grid">
         <div class="project-item" onclick="toggleDescription(this)">
           <strong>Jump King Clone</strong>
-          <p>Java-based recreation of Jump King with custom physics engine, GUI, sprite management, and precision collision detection.</p>
+          <p>
+            Java-based recreation of Jump King with custom physics engine, GUI,
+            sprite management, and precision collision detection.
+          </p>
         </div>
         <div class="project-item" onclick="toggleDescription(this)">
           <strong>Custom Text-to-Speech AI</strong>
-          <p>Python-based offline AI voice synthesizer with support for long documents, privacy, GPU/CPU switching, and a user-friendly interface.</p>
+          <p>
+            Python-based offline AI voice synthesizer with support for long
+            documents, privacy, GPU/CPU switching, and a user-friendly
+            interface.
+          </p>
         </div>
         <div class="project-item" onclick="toggleDescription(this)">
           <strong>Smart Calendar on Raspberry Pi</strong>
-          <p>Python app using Google Calendar API, real-time sync, time severity visuals, and automatic formatting, running 24/7 on a Pi.</p>
+          <p>
+            Python app using Google Calendar API, real-time sync, time severity
+            visuals, and automatic formatting, running 24/7 on a Pi.
+          </p>
+        </div>
+        <div class="project-item" onclick="toggleDescription(this)">
+          <strong>Multiplayer Museum Tour Software</strong>
+          <p>
+            Worked in a scrum team on frontend/backend for museum software with
+            location tracking, multiplayer, and optimized animations.
+          </p>
         </div>
       </div>
+
+      <h2>Skills</h2>
       <div class="skills-grid">
         <div class="skill-item">
           <strong>Fluent Languages:</strong> C++, Python, Java, JavaScript
@@ -167,12 +206,24 @@
           <strong>Frameworks:</strong> React, Node.js, Unreal Engine
         </div>
         <div class="skill-item">
-          <strong>Cloud:</strong> AWS (DynamoDB, S3, EC2, Beanstalk), Microsoft Azure
+          <strong>Cloud:</strong> AWS (DynamoDB, S3, EC2, Beanstalk), Microsoft
+          Azure
         </div>
       </div>
     </div>
+
     <script>
+      function toggleDescription(element) {
+        const isActive = element.classList.contains("active");
+        document.querySelectorAll(".project-item").forEach((item) => item.classList.remove("active"));
+        if (!isActive) element.classList.add("active");
+      }
+
       window.addEventListener("DOMContentLoaded", () => {
+        const maxMobileDots = 100;
+        const isMobile = window.innerWidth <= 1000;
+        const maxDots = isMobile ? maxMobileDots : 600;
+
         const canvas = document.getElementById("canvas");
         const ctx = canvas.getContext("2d");
         if (!ctx) return console.error("Canvas rendering context not available");
@@ -184,12 +235,11 @@
           height = canvas.height = window.innerHeight;
         });
 
-        let dotCount = 500;
         const dots = [];
         const mouse = { x: null, y: null };
+
         const wrapBuffer = 50;
-        let directionDeg = 0;
-        const directionModifier = 0.005;
+        let dotCount = Math.min(400, maxDots);
 
         window.addEventListener("mousemove", (e) => {
           mouse.x = e.clientX;
@@ -203,7 +253,9 @@
 
         function circlePoint(radius, deg) {
           let rad = deg * (Math.PI / 180);
-          return { x: radius * Math.cos(rad), y: radius * Math.sin(rad) };
+          let x = radius * Math.cos(rad);
+          let y = radius * Math.sin(rad);
+          return { x, y };
         }
 
         for (let i = 0; i < dotCount; i++) {
@@ -212,11 +264,14 @@
             y: Math.random() * height,
             vx: 0.3 + Math.random() * 0.2,
             vy: -0.3 - Math.random() * 0.2,
-            color: randomColor()
+            color: randomColor(),
           });
         }
 
         let frameTimes = [];
+        let directionDeg = 0;
+        const directionModifier = 0.005;
+
         function draw() {
           ctx.clearRect(0, 0, width, height);
           for (let i = 0; i < dots.length; i++) {
@@ -260,11 +315,12 @@
               const dx = dot.x - other.x;
               const dy = dot.y - other.y;
               const dist = Math.sqrt(dx * dx + dy * dy);
+
               if (dist < 120) {
                 ctx.beginPath();
                 ctx.moveTo(dot.x, dot.y);
                 ctx.lineTo(other.x, other.y);
-                ctx.strokeStyle = `rgba(255, 255, 255,${1 - dist / 120})`;
+                ctx.strokeStyle = "rgba(255, 255, 255," + (1 - dist / 120) + ")";
                 ctx.lineWidth = 0.5;
                 ctx.stroke();
               }
@@ -272,9 +328,9 @@
 
             dot.vx *= 0.99;
             dot.vy *= 0.99;
-            const dir = circlePoint(1, directionDeg);
-            dot.vx += dir.x * directionModifier;
-            dot.vy += dir.y * directionModifier;
+
+            dot.vx += circlePoint(1, directionDeg).x * directionModifier;
+            dot.vy += circlePoint(1, directionDeg).y * directionModifier;
             directionDeg += 0.00005;
 
             dot.x += dot.vx;
@@ -295,14 +351,14 @@
 
           if (fps < 50 && dots.length > 200) {
             dots.splice(-10);
-          } else if (fps > 55 && dots.length < 600) {
+          } else if (fps > 55 && dots.length < maxDots) {
             for (let i = 0; i < 10; i++) {
               dots.push({
                 x: Math.random() * width,
                 y: Math.random() * height,
                 vx: 0.3 + Math.random() * 0.2,
                 vy: -0.3 - Math.random() * 0.2,
-                color: randomColor()
+                color: randomColor(),
               });
             }
           }
@@ -312,12 +368,6 @@
 
         draw();
       });
-
-      function toggleDescription(element) {
-        const isActive = element.classList.contains("active");
-        document.querySelectorAll(".project-item").forEach((item) => item.classList.remove("active"));
-        if (!isActive) element.classList.add("active");
-      }
     </script>
   </body>
 </html>
