added human benchmark to it

--- a/index.html
+++ b/index.html
@@ -207,6 +207,39 @@
             </div>
           </div>
         </div>
+        <!-- Aimbot -->
+        <div class="project-item" onclick="toggleDescription(this)">
+          <strong>Custom Aimbot</strong>
+          <div class="project-description">
+            <p>
+              This is a personal favorite of mine. I utilized computer vision to
+              try and get the best time possible on the human benchmark test in
+              multiple ways.
+            </p>
+            <div class="auto-video">
+              <video autoplay muted loop playsinline class="no-controls">
+                <source src="AimBot video.mp4" type="video/mp4" />
+                Your browser does not support this video.
+              </video>
+            </div>
+          </div>
+        </div>
+        <!-- Smart Calendar -->
+        <div class="project-item" onclick="toggleDescription(this)">
+          <strong>Custom Smart Calendar</strong>
+          <div class="project-description">
+            <p>
+              A smart calendar system that syncs tasks and events, highlights
+              conflicts, and uses natural language parsing for quick
+              understanding.
+            </p>
+            <div class="image-row">
+              <img src="calendar_image_dinner.png" alt="Calendar - Dinner" />
+              <img src="calendar_image_today.png" alt="Calendar - Today" />
+              <img src="calendar_image_train.png" alt="Calendar - Train" />
+            </div>
+          </div>
+        </div>
         <!-- Jump King Clone -->
         <div class="project-item" onclick="toggleDescription(this)">
           <strong>Jump King Clone</strong>
@@ -227,24 +260,8 @@
             />
           </div>
         </div>
-
-        <!-- Smart Calendar -->
-        <div class="project-item" onclick="toggleDescription(this)">
-          <strong>Custom Smart Calendar</strong>
-          <div class="project-description">
-            <p>
-              A smart calendar system that syncs tasks and events, highlights
-              conflicts, and uses natural language parsing for quick
-              understanding.
-            </p>
-            <div class="image-row">
-              <img src="calendar_image_dinner.png" alt="Calendar - Dinner" />
-              <img src="calendar_image_today.png" alt="Calendar - Today" />
-              <img src="calendar_image_train.png" alt="Calendar - Train" />
-            </div>
-          </div>
-        </div>
       </div>
+
       <h2>Skills</h2>
       <div class="skills-grid">
         <div class="skill-item">
