fixed images, video, and audio files so the website works again

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               backend, every animation, as well as the main QA tester.
             </p>
             <img
-              src="Riverside storytelling.png"
+              src="images/YETi/Riverside/Riverside storytelling.png"
               alt="Screenshot of the product I've worked on"
               style="
                 margin-top: 1em;
@@ -133,7 +133,7 @@
               "
             />
             <img
-              src="inside_museum.png"
+              src="images/YETi/Museum/inside_museum.png"
               alt="inside of the museum"
               style="
                 margin-top: 1em;
@@ -161,7 +161,7 @@
             </p>
             <div class="video-wrapper">
               <video controls muted poster>
-                <source src="Physics Example.mp4" type="video/mp4" />
+                <source src="Video/YETi/Physics Example.mp4" type="video/mp4" />
                 You're browser does not support this video
               </video>
             </div>
@@ -181,7 +181,7 @@
             </p>
             <div class="video-wrapper">
               <video controls muted>
-                <source src="To-do-list.mp4" type="video/mp4" />
+                <source src="Video/YETi/To-do-list.mp4" type="video/mp4" />
                 Your browser does not support this video.
               </video>
             </div>
@@ -218,7 +218,10 @@
             </p>
             <div class="auto-video">
               <video autoplay muted loop playsinline class="no-controls">
-                <source src="AimBot video.mp4" type="video/mp4" />
+                <source
+                  src="Video/Personal_Project/Aimbot_video.mp4"
+                  type="video/mp4"
+                />
                 Your browser does not support this video.
               </video>
             </div>
@@ -234,9 +237,18 @@
               understanding.
             </p>
             <div class="image-row">
-              <img src="calendar_image_dinner.png" alt="Calendar - Dinner" />
-              <img src="calendar_image_today.png" alt="Calendar - Today" />
-              <img src="calendar_image_train.png" alt="Calendar - Train" />
+              <img
+                src="images/calendar/calendar_image_dinner.png"
+                alt="Calendar - Dinner"
+              />
+              <img
+                src="images/calendar/calendar_image_today.png"
+                alt="Calendar - Today"
+              />
+              <img
+                src="images/calendar/calendar_image_train.png"
+                alt="Calendar - Train"
+              />
             </div>
           </div>
         </div>
@@ -249,7 +261,7 @@
               GUI, sprite management, and precision collision detection.
             </p>
             <img
-              src="JumpKingSC.png"
+              src="images/JumpKing/JumpKingSC.png"
               alt="Jump King Screenshot"
               style="
                 margin-top: 1em;
