--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
               alt="LinkedIn"
             />
           </a>
+          <a href="mailto:bradystrouse@gmail.com">
+            <img
+              src="https://img.icons8.com/?size=100&id=qyRpAggnV0zH&format=png&color=000000"
+              alt="My Email"
+            />
+          </a>
         </div>
       </div>
       <h1>Brady Strouse — My Developer Portfolio</h1>
