fixed google calendar description

--- a/index.html
+++ b/index.html
@@ -238,9 +238,10 @@
           <strong>Custom Smart Calendar</strong>
           <div class="project-description">
             <p>
-              A smart calendar system that syncs tasks and events, highlights
+              A smart calendar system that syncs tasks and events with my google calendar, highlights
               conflicts, and uses natural language parsing for quick
-              understanding.
+              understanding. I put this peice of software onto a Rasberry Pi and a second display 
+              and it's currently cycling through my events on my wall!
             </p>
             <div class="image-row">
               <img
