How did I forget to including my lindkdin link....Fixed now

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             />
           </a>
           <a
-            href="https://linkedin.com/in/YOUR_USERNAME"
+            href="https://www.linkedin.com/in/brady-strouse/"
             target="_blank"
             aria-label="LinkedIn"
           >
