Changed wording a little bit to make it less samey

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
         <!-- Aimbot -->
         <div class="project-item" onclick="toggleDescription(this)">
-          <strong>Custom Aimbot</strong>
+          <strong>Personal Aimbot</strong>
           <div class="project-description">
             <p>
               This is a personal favorite of mine. I utilized computer vision to
@@ -235,7 +235,7 @@
         </div>
         <!-- Smart Calendar -->
         <div class="project-item" onclick="toggleDescription(this)">
-          <strong>Custom Smart Calendar</strong>
+          <strong>Physical Smart Calendar</strong>
           <div class="project-description">
             <p>
               A smart calendar system that syncs tasks and events with my google calendar, highlights
